tests/success/func_call.crema
def int foo(int a) {
    return a + 32
}

int bar = foo(123)
