tests/fail/func_arg_num_mismatch.crema
def int foo(int a, int b) {
    return 32
}

int bar = foo(1)
